--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <header>
-      <div><img src="https://place-hold.it/200x100" /></div>
+      <div class="header__logo">
+        <a href="/">
+          <img src="https://place-hold.it/200x100" />
+        </a>
+      </div>
       <nav>
         <ul class="navbar">
           <li><a href="#main-section" class="nav__item-actived">Home</a></li>
