review and add CSS

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <img src="https://place-hold.it/200x100" />
         </a>
       </div>
-      <nav>
-        <ul class="navbar">
-          <li><a href="#main-section" class="nav__item-actived">Home</a></li>
-          <li><a href="#concept" class="nav__item-actived">Concepto</a></li>
+      <nav class="navbar">
+        <ul >
+          <li><a href="#main-section" class="nav __item nav__item-active">Home</a></li>
+          <li><a href="#concept" class="nav__ item nav__item-active">Concepto</a></li>
           <li><a href="#photos-gallery">Fotos</a></li>
           <li><a href="#menu">Menú</a></li>
           <li><a href="#booking">Reserva</a></li>
@@ -315,7 +315,7 @@
               </article>
             </a>
           </li>
-          <li>
+          <li> 
             <a href="/article-2">
               <article>
                 <div class="mozzabar__title">Mozza Bar</div>
